--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -59,44 +59,6 @@ class: bg_yellow, center, middle
 ---
 class: bg_yellow, center, middle
 
-## Compreender esse processo deve ser tarefa básica em nossa profissão.
-
----
-class: bg_yellow, center, middle
-
-## E os documentos digitalizados?
-<br>
-
---
-### - Como o processo de digitalização afeta sua pesquisa?
-<br>
-
---
-### - Acessados, lidos e trabalhados emulando práticas analógicas?
-<br>
-
---
-### - OCR, HTR.
-
----
-class: bg_yellow, center, middle
-## E as interfaces gráficas (GUI)?
-<br>
-
---
-### - Difícil avaliar precisamente o que você está pesquisando, acessando e  quais as escolhas técnicas e teóricas por trás dos resultados mostrados na tela.
-<br>
-
---
-### - Quão representativos são no conjunto de dados?
-<br>
-
---
-### - Elas restringem suas perguntas ou abrem possibilidades de novas?
-
----
-class: bg_yellow, center, middle
-
 ## Como coletar e organizar esses dados?
 <br>
 
@@ -114,6 +76,11 @@ class: bg_yellow, center, middle
 
 --
 ### - Metadados? Navegar, descobrir e organizar. Mas também um objeto em si mesmo (BLANEY, et al. 2021. p. 61)
+
+---
+class: bg_yellow, center, middle
+
+## Compreender esse processo deve ser tarefa básica em nossa profissão.
 
 ---
 class: bg_yellow, center, middle
@@ -157,22 +124,20 @@ class: bg_yellow, center, middle
 ---
 class: bg_green, center, middle
 
-# Git
-<br>
-
-## Controle de versões como método de documentação da pesquisa
+# Controle de versões como método de documentação da pesquisa
 
 ---
 class: bg_yellow, center, middle
 ## Você já fez isso?
 <br>
-
+--
 .pull-left[
 
 ### - trabalho_final.docx
 ### - trabalho_final2.docx
 ### - trabalho_final_final.docx
 ]
+--
 .pull-right[
 
 ### - trabalho_final_revisão.docx
@@ -185,22 +150,30 @@ class: bg_yellow, center, middle
 
 ## É fundamental criar um plano para organização, documentação, preservação e compartilhamento dos dados, métodos e resultados da pequisa.
 
-## Podemos enfrentar boa parte desses desafios utilizando git.
 <br>
 
 ### Veja essa lição de [James Backer sobre preservação dos dados de investigação](https://programminghistorian.org/pt/licoes/preservar-os-seus-dados-de-investigacao) para outras estratégias e referências.
 
 ---
 class: bg_yellow, center, middle
-## O que é git?
-<br>
-
---
-### *Version Control System*
+## Podemos enfrentar boa parte desses desafios utilizando programas de controle de versões, como o git.
 
 ---
 class: bg_yellow, center, middle
 
+# Mas afinal, o que é o [git](https://git-scm.com/)?
+<br>
+
+```{r, out.width="20%"}
+knitr::include_graphics("img/git.png")
+```
+
+---
+class: bg_yellow, center, middle
+###	- Sistema de controle de versões
+<br>
+
+--
 ###	- Distribuído
 <br>
 
@@ -282,20 +255,79 @@ class: bg_green, middle, center
 
 # E o GitHub?
 
+```{r, out.width="20%"}
+knitr::include_graphics("img/gh.png")
+```
+
 ---
 class: bg_yellow, middle, center
 
-## O que é?
+## Plataforma de hospedagem de códigos e arquivos
+<br>
+
+--
+### - Possui controle de versões utilizando Git;
+<br>
+
+--
+### - Rede Social;
+
+---
+class: bg_yellow, middle, center
+## Características
+<br>
+
+--
+
+.pull-left[
+
+###	- Colaboração e trabalho com equipes grandes
+<br>
+
+###	- Repositórios ilimitados
+<br>
+
+###	- Gestão de projetos
+<br>
+]
+
+--
+
+.pull-right[
+
+###	- Automação de tarefas (GitHub Actions)
+<br>
+
+###	- Deploy de páginas estáticas (GitHub Pages, Netlify)
+<br>
+
+###	- Integração com o [Zenodo](https://zenodo.org/)
+]
 
 ---
 class: bg_green, middle, center
 
 # O caso do Programming Historian
 
+```{r, out.width="20%"}
+knitr::include_graphics("img/ph.png")
+```
+
 ---
 class: bg_yellow, middle, center
 
-## O que é?
+## O que é? 
+<br>
+--
+
+### "Publicamos tutoriais acessíveis, avaliados por pares, que ajudam os humanistas a aprender uma ampla gama de ferramentas digitais, técnicas computacionais e metodologias de trabalho que facilitam a pesquisa e o ensino."
+
+---
+class: bg_yellow, middle, center
+## Vamos ver um exemplo? [Aqui](https://github.com/programminghistorian)
+<br>
+
+### "O Programming Historian tem como objetivo influenciar como a comunidade de história digital convida colaboradores, revisa seu trabalho e o publica." (McClurken,2016)
 
 ---
 class: bg_green, middle, center
@@ -305,19 +337,17 @@ class: bg_green, middle, center
 ---
 class: bg_yellow, middle, center
 
+--
+
 ### - O digital substituirá as ferramentas básicas da operação historiográfica?
 <br>
 
 --
 ### - Como isso afeta a construção do conhecimento histórico?
-<br>
 
---
-### - O digital substituirá as ferramentas básicas da operação historiográfica?
-<br>
-
---
-### - Como isso afeta a construção do conhecimento histórico?
+---
+class: bg_yellow, middle, center
+## Para saber mais sobre aspectos práticos do git e GitHub, [acesse o link](https://gitegithub.netlify.app/).
 
 ---
 class: bg_yellow, middle, center
@@ -382,11 +412,6 @@ class: title-slide-final, middle, center
 # Obrigado, gente!
 
 .pull-left[
-```{r, out.width="90%"}
-knitr::include_graphics("https://media2.giphy.com/media/3o6wNIV9FP28JIleyk/giphy.gif?cid=ecf05e47zu5xdrqbq7ehu5dmzo76n6nqww430nqs4z5ppy8b&rid=giphy.gif&ct=g")
-```
-]
-.pull-right[
 <br>
 
 ## Agradecimentos especiais:
@@ -395,3 +420,8 @@ knitr::include_graphics("https://media2.giphy.com/media/3o6wNIV9FP28JIleyk/giphy
 ## Ao Jimmy pelo convite e mediação, Juliana pela participação e ao público pela escuta e debate.
 ]
 
+.pull-right[
+```{r, out.width="90%"}
+knitr::include_graphics("https://media2.giphy.com/media/3o6wNIV9FP28JIleyk/giphy.gif?cid=ecf05e47zu5xdrqbq7ehu5dmzo76n6nqww430nqs4z5ppy8b&rid=giphy.gif&ct=g")
+```
+]
