--- a/docs/biblio.Rmd
+++ b/docs/biblio.Rmd
@@ -2,7 +2,7 @@
 title: "Criação, manutenção e divulgação de projetos de História em meios digitais: git, GitHub e o Programming Historian"
 subtitle: "Bibliografia para o webinar organizado pelo LHUD/FGV/CPDOC"
 author: "[Eric Brasil](https://ericbrasiln.github.io)"
-date: '20 de maio de 2022'
+date: '20 de maio de 2022<br>[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.6566754.svg)](https://doi.org/10.5281/zenodo.6566754)'
 output: html_document
 ---
 
